feat: get current logged in user
